commit translated contents

--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -22,6 +22,9 @@
     - name: 创建持久函数 - Python
       displayName: 'get started, chaining'
       href: quickstart-python-vscode.md
+    - name: 创建持久函数 - PowerShell
+      displayName: 'get started, chaining'
+      href: quickstart-powershell-vscode.md
 - name: 教程
   items:
     - name: 函数链
