--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -172,6 +172,8 @@
           href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-explorer/digital-twins-explorer/'
         - name: DTDL 验证器（示例）
           href: 'https://docs.microsoft.com/samples/azure-samples/dtdl-validator/dtdl-validator/'
+        - name: DPS 和 IoT 中心集成示例
+          href: 'https://github.com/Azure-Samples/digital-twins-iothub-integration'
     - name: Azure 工具
       items:
         - name: Azure Cloud Shell
