--- a/articles/key-vault/general/index.yml
+++ b/articles/key-vault/general/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 09/19/2019
-  ms.openlocfilehash: ff7af5ead7cc14deb974700e7bf6f3553f2e71f7
-  ms.sourcegitcommit: 5b8fb60a5ded05c5b7281094d18cf8ae15cb1d55
+  ms.openlocfilehash: ada202a8683b64144f2adacc759b9461472e4a31
+  ms.sourcegitcommit: 64ad2c8effa70506591b88abaa8836d64621e166
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "87387738"
+  ms.lasthandoff: 08/17/2020
+  ms.locfileid: "88262562"
 landingContent:
 - title: 关于 Azure Key Vault
   linkLists:
@@ -62,6 +62,20 @@ landingContent:
       url: managed-identity.md
     - text: 使用访问策略
       url: group-permissions-for-apps.md
+- title: 客户端库
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: Azure Key Vault 的客户端库
+      url: client-libraries.md
+    - text: .NET 客户端库
+      url: /dotnet/api/overview/azure/key-vault?view=azure-dotnet
+    - text: Python 客户端库
+      url: /python/api/overview/azure/key-vault-index?view=azure-python
+    - text: Java 客户端库
+      url: https://azure.github.io/azure-sdk-for-java/keyvault.html
+    - text: Node.js 客户端库
+      url: /javascript/api/overview/azure/key-vault-index?view=azure-node-latest
 - title: Microsoft Learn
   linkLists:
   - linkListType: learn
