--- a/articles/key-vault/secrets/index.yml
+++ b/articles/key-vault/secrets/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 754377f8860b01b9c05113f239cdd3f9927df079
-  ms.sourcegitcommit: 29400316f0c221a43aff3962d591629f0757e780
+  ms.openlocfilehash: ba2e53dfcf1a752c76019a9fe3bebe6a4eae5d81
+  ms.sourcegitcommit: 64ad2c8effa70506591b88abaa8836d64621e166
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/02/2020
-  ms.locfileid: "87512731"
+  ms.lasthandoff: 08/17/2020
+  ms.locfileid: "88263362"
 landingContent:
 - title: 机密
   linkLists:
@@ -62,6 +62,18 @@ landingContent:
       url: overview-storage-keys-powershell.md
     - text: 通过编写代码提取共享访问签名令牌
       url: storage-keys-sas-tokens-code.md
+- title: Key Vault 机密的客户端库
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: .NET 客户端库
+      url: /dotnet/api/azure.security.keyvault.secrets?view=azure-dotnet
+    - text: Python 客户端库
+      url: /python/api/overview/azure/keyvault-secrets-readme?view=azure-python
+    - text: Java 客户端库
+      url: https://azuresdkdocs.blob.core.windows.net/$web/java/azure-security-keyvault-secrets/4.2.0/index.html
+    - text: Node.js 客户端库
+      url: /javascript/api/@azure/keyvault-secrets/?view=azure-node-latest
 - title: 有关 Key Vault 的详细信息
   linkLists:
   - linkListType: overview
