--- a/articles/active-directory/users-groups-roles/TOC.yml
+++ b/articles/active-directory/users-groups-roles/TOC.yml
@@ -42,6 +42,8 @@
           href: /azure/active-directory/fundamentals/add-users-azure-active-directory?context=azure/active-directory/users-groups-roles/context/ugr-context
         - name: 批量创建用户
           href: users-bulk-add.md
+        - name: 限制来宾用户权限
+          href: users-restrict-guest-permissions.md
         - name: 管理用户个人资料
           href: /azure/active-directory/fundamentals/active-directory-users-profile-azure-portal?context=azure/active-directory/users-groups-roles/context/ugr-context
         - name: “我的员工”委托
@@ -68,19 +70,19 @@
           href: /azure/active-directory/b2b/add-guest-to-role?context=azure/active-directory/users-groups-roles/context/ugr-context
         - name: 动态组和 B2B
           href: /azure/active-directory/b2b/use-dynamic-groups?context=azure/active-directory/users-groups-roles/context/ugr-context
-    - name: 管理目录
+    - name: 管理多个租户
       items:
-        - name: Azure AD 组织
+        - name: Azure AD 租户管理
           href: /azure/active-directory/fundamentals/active-directory-administer?context=azure/active-directory/users-groups-roles/context/ugr-context
         - name: 管理域名
           href: domains-manage.md
-        - name: 删除目录
+        - name: 删除租户
           href: directory-delete-howto.md
         - name: 多个目录
           href: licensing-directory-independence.md
         - name: 自助服务注册
           href: directory-self-service-signup.md
-        - name: 接管目录
+        - name: 接管租户
           href: domains-admin-takeover.md
         - name: Azure AD Connect
           href: /azure/active-directory/connect/active-directory-aadconnect?context=azure/active-directory/users-groups-roles/context/ugr-context
