--- a/articles/hdinsight/TOC.yml
+++ b/articles/hdinsight/TOC.yml
@@ -356,6 +356,8 @@
               href: ./set-up-pyspark-interactive-environment.md
         - name: 开发
           items:
+            - name: 使用 SparkCruise 优化查询
+              href: ./spark/spark-cruise.md
             - name: 使用交互式 Apache Spark Shell
               href: ./spark/apache-spark-shell.md
             - name: 使用 Apache Livy 提交远程作业
