--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -151,6 +151,8 @@
           href: workflow-automation.md
         - name: 导出建议
           href: continuous-export.md
+    - name: 使用资产清单管理资源
+      href: asset-inventory.md
     - name: 与其他工具和服务集成
       items:
         - name: 与 Windows Admin Center 集成
