commit translated contents

--- a/articles/azure-sql/database/index.yml
+++ b/articles/azure-sql/database/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mathoma
   ms.reviewer: carlrab
   ms.date: 05/27/2020
-  ms.openlocfilehash: 79c834ba1b4e120595f032517835aa3d119088d9
-  ms.sourcegitcommit: 1aef4235aec3fd326ded18df7fdb750883809ae8
+  ms.openlocfilehash: 65ab57b6036ec8a1dd6c47560a37c5e687601ad1
+  ms.sourcegitcommit: 02ca0f340a44b7e18acca1351c8e81f3cca4a370
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/12/2020
-  ms.locfileid: "88135974"
+  ms.lasthandoff: 08/19/2020
+  ms.locfileid: "88587236"
 landingContent:
 - title: Azure SQL 数据库
   linkLists:
@@ -27,6 +27,10 @@ landingContent:
       url: single-database-create-quickstart.md
     - text: 配置防火墙
       url: firewall-create-server-level-portal-quickstart.md
+  - linkListType: video
+    links:
+    - text: Azure SQL 数据库概述
+      url: https://channel9.msdn.com/Series/Azure-SQL-for-Beginners/Azure-SQL-Database-Overview-7-of-61
   - linkListType: concept
     links:
     - text: 新增功能
@@ -93,12 +97,22 @@ landingContent:
       url: elastic-pool-scale.md
     - text: 资源管理
       url: elastic-pool-resource-management.md
-- title: 参考
+- title: 了解 Azure SQL
   linkLists:
   - linkListType: learn
     links:
+    - text: 面向初学者的 Azure SQL
+      url: https://aka.ms/azuresql4beginners
+    - text: Azure SQL 基础知识
+      url: https://docs.microsoft.com/learn/paths/azure-sql-fundamentals/
+    - text: Azure SQL 实操练习
+      url: https://aka.ms/asqlworkshop
+    - text: Azure SQL 集训营
+      url: https://aka.ms/azuresqlbootcamp
     - text: SQL 教育资源
       url: /sql/sql-server/educational-sql-resources
+- title: 参考
+  linkLists:
   - linkListType: deploy
     links:
     - text: Azure CLI 示例
