--- a/articles/azure-sql/index.yml
+++ b/articles/azure-sql/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.author: mathoma
   ms.reviewer: carlrab
   ms.date: 10/30/2019
-  ms.openlocfilehash: 131be4c87e0274050b6c7b374f75757c8d3f94f2
-  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
+  ms.openlocfilehash: 03f1f908983487bb3ee5be88ced36a0848a731cc
+  ms.sourcegitcommit: 02ca0f340a44b7e18acca1351c8e81f3cca4a370
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "88167838"
+  ms.lasthandoff: 08/19/2020
+  ms.locfileid: "88590432"
 landingContent:
 - title: Azure SQL Database
   linkLists:
@@ -37,6 +37,10 @@ landingContent:
       url: database/single-database-create-quickstart.md
     - text: 配置防火墙
       url: database/firewall-create-server-level-portal-quickstart.md
+  - linkListType: video
+    links:
+    - text: Azure SQL 数据库概述
+      url: https://channel9.msdn.com/Series/Azure-SQL-for-Beginners/Azure-SQL-Database-Overview-7-of-61
   - linkListType: concept
     links:
     - text: 从 SQL Server 迁移
@@ -67,6 +71,10 @@ landingContent:
       url: managed-instance/connect-vm-instance-configure.md
     - text: 还原示例数据库
       url: managed-instance/restore-sample-database-quickstart.md
+  - linkListType: video
+    links:
+    - text: Azure SQL 托管实例概述
+      url: https://channel9.msdn.com/Series/Azure-SQL-for-Beginners/Azure-SQL-Managed-Instance-Overview-6-of-61
   - linkListType: concept
     links:
     - text: 从 SQL Server 迁移
@@ -95,6 +103,10 @@ landingContent:
       url: virtual-machines/windows/sql-vm-create-portal-quickstart.md
     - text: 在 Azure VM 上创建 SQL (Linux)
       url: virtual-machines/linux/sql-vm-create-portal-quickstart.md
+  - linkListType: video
+    links:
+    - text: Azure VM 上的 SQL Server 概述
+      url: https://channel9.msdn.com/Series/Azure-SQL-for-Beginners/SQL-Server-on-Azure-VM-Overview-4-of-61
   - linkListType: concept
     links:
     - text: 从 SQL Server 迁移
@@ -145,14 +157,22 @@ landingContent:
       url: database/design-first-database-tutorial.md
     - text: 设计第一个数据库 (C#)
       url: database/design-first-database-csharp-tutorial.md
-- title: 参考
+- title: 了解 Azure SQL
   linkLists:
   - linkListType: learn
     links:
-    - text: SQL 教育资源
-      url: /sql/sql-server/educational-sql-resources
+    - text: 面向初学者的 Azure SQL
+      url: https://aka.ms/azuresql4beginners
     - text: Azure SQL 基础知识
       url: https://docs.microsoft.com/learn/paths/azure-sql-fundamentals/
+    - text: Azure SQL 实操练习
+      url: https://aka.ms/asqlworkshop
+    - text: Azure SQL 集训营
+      url: https://aka.ms/azuresqlbootcamp
+    - text: SQL 教育资源
+      url: /sql/sql-server/educational-sql-resources
+- title: 参考
+  linkLists:
   - linkListType: deploy
     links:
     - text: Azure CLI 示例
