--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -1265,9 +1265,11 @@
           href: sql-api-sdk-async-java.md
         - name: Sync Java SDK v2
           href: sql-api-sdk-java.md
-        - name: 适用于 SQL API 的 Spring 数据连接器
-          href: sql-api-sdk-java-spring.md
-        - name: 适用于 SQL API 的 Spark 连接器
+        - name: Spring 数据连接器 v2
+          href: sql-api-sdk-java-spring-v2.md
+        - name: Spring 数据连接器 v3
+          href: sql-api-sdk-java-spring-v3.md
+        - name: Spark 连接器
           href: sql-api-sdk-java-spark.md
         - name: Java 批量执行程序库 v2
           href: sql-api-sdk-bulk-executor-java.md
