--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -71,9 +71,6 @@
       items:
         - name: 资产
           href: assets-concept.md
-        - name: 管理资产
-          href: manage-asset-concept.md
-          displayName: 'name, naming, file name, upload, output, download'
     - name: 处理文件
       items:
         - name: 转换和作业
@@ -222,20 +219,14 @@
   items:
     - name: 入门
       items:
-        - name: 创建帐户
+        - name: 查找你的 Azure 订阅
+          href: how-to-set-azure-subscription.md
+        - name: 创建媒体服务帐户
           href: create-account-howto.md
           displayName: 'portal, cli, storage'
-        - name: 重置帐户凭据
-          href: cli-reset-account-credentials.md
         - name: 访问 API
           displayName: 'portal, cli'
           href: access-api-howto.md
-        - name: 缩放媒体保留单位
-          href: media-reserved-units-cli-how-to.md
-        - name: 创建资产
-          href: cli-create-asset.md
-    - name: 开发人员指南
-      items:
         - name: 使用 REST 进行开发
           items:
             - name: 使用 Postman 进行连接
@@ -250,6 +241,15 @@
               href: configure-connect-nodejs-howto.md
             - name: 使用 Python 进行连接
               href: configure-connect-python-howto.md
+        - name: 重置帐户凭据
+          href: cli-reset-account-credentials.md
+    - name: 创建和管理资产
+      items:
+        - name: 创建资产
+          href: cli-create-asset.md
+        - name: 管理资产
+          href: manage-asset-concept.md
+          displayName: 'name, naming, file name, upload, output, download'
     - name: 上传内容
       items:
         - name: 从 HTTPS
@@ -282,6 +282,8 @@
           displayName: 'encode, encoding'
           href: job-input-from-local-file-how-to.md
         - name: 通过自定义转换进行编码
+        - name: 缩放媒体保留单位
+          href: media-reserved-units-cli-how-to.md
           items:
             - name: 使用 .NET
               displayName: 'encode, encoding, custom, transform'
