--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -74,10 +74,10 @@
       href: ./sql/tutorial-connect-power-bi-desktop.md
     - name: 数据科学家
       items:
-        - name: 预测纽约市出租车小费
+        - name: 使用 Azure AutoML 运行回归试验
+          href: ./spark/apache-spark-azure-machine-learning-tutorial.md
+        - name: 使用 Apache Spark MLlib 创建分类模型
           href: ./spark/apache-spark-machine-learning-mllib-notebook.md
-        - name: 使用额外的库扩充 Apache Spark
-          href: ./spark/apache-spark-azure-portal-add-libraries.md
     - name: 数据分析师
       items:
         - name: 使用 SQL 按需版本进行分析并使用 Synapse Studio 进行可视化
@@ -202,8 +202,6 @@
               href: ./spark/apache-spark-overview.md
             - name: Apache Spark 的概念
               href: ./spark/apache-spark-concepts.md
-            - name: 运行时语言和库支持
-              href: ./spark/apache-spark-version-support.md
             - name: 什么是 Delta Lake
               href: ./spark/apache-spark-what-is-delta-lake.md
             - name: Apache Spark 性能
@@ -212,6 +210,12 @@
               href: ./spark/apache-spark-autoscale.md
         - name: 开发
           items:
+            - name: 库
+              items:
+                - name: 添加和管理库
+                  href: ./spark/apache-spark-azure-portal-add-libraries.md
+                - name: 运行时语言和库支持
+                  href: ./spark/apache-spark-version-support.md
             - name: Azure Synapse Studio 笔记本
               href: ./spark/apache-spark-development-using-notebooks.md
             - name: .NET for Apache Spark
@@ -244,7 +248,7 @@
           items:
             - name: 概述
               href: ./sql-data-warehouse/design-elt-data-loading.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
-            - name: 最佳实践
+            - name: 最佳做法
               href: sql/data-loading-best-practices.md
             - name: 列存储压缩
               href: sql/data-load-columnstore-compression.md
