--- a/articles/bastion/TOC.yml
+++ b/articles/bastion/TOC.yml
@@ -2,7 +2,7 @@
   href: index.yml
 - name: 概述
   items:
-    - name: 关于 Azure Bastion
+    - name: 什么是 Azure Bastion？
       href: bastion-overview.md
 - name: 快速入门
   items:
