--- a/articles/cost-management-billing/index.yml
+++ b/articles/cost-management-billing/index.yml
@@ -5,17 +5,18 @@ metadata:
   title: Azure 成本管理 + 计费
   description: “Azure 成本管理 + 计费”可帮助你了解 Azure 计费、管理帐户和订阅、监视和控制 Azure 支出，并优化资源使用。 了解如何分析成本、创建和管理预算、导出数据，以及查看建议并根据建议采取措施。
   ms.service: cost-management-billing
+  ms.subservice: common
   ms.topic: landing-page
   ms.collection: collection
   author: bandersmsft
   ms.author: banders
-  ms.date: 06/01/2020
-  ms.openlocfilehash: c999417f091d82adf09df5d6962de146ef58b285
-  ms.sourcegitcommit: ef055468d1cb0de4433e1403d6617fede7f5d00e
+  ms.date: 08/20/2020
+  ms.openlocfilehash: 1d3fafd26b5ad7f92d9280701a386a09f1ad3d22
+  ms.sourcegitcommit: 56cbd6d97cb52e61ceb6d3894abe1977713354d9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/16/2020
-  ms.locfileid: "88257369"
+  ms.lasthandoff: 08/20/2020
+  ms.locfileid: "88683124"
 landingContent:
 - title: 分析成本
   linkLists:
