--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -63,6 +63,8 @@
       href: ../../firewall/security-baseline.md
     - name: Azure Functions 安全基线
       href: ../../azure-functions/security-baseline.md
+    - name: Azure 机器学习安全基线
+      href: ../../machine-learning/security-baseline.md
     - name: Azure Policy 安全基线
       href: ../../governance/policy/concepts/azure-security-benchmark-baseline.md
     - name: Azure Resource Graph 安全基线
