--- a/articles/virtual-machines/troubleshooting/index.yml
+++ b/articles/virtual-machines/troubleshooting/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: genlin
   ms.author: genli
   ms.date: 09/09/2019
-  ms.openlocfilehash: ca49aafcfa4911c97cff4a9187184ba420cd76da
-  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
+  ms.openlocfilehash: 24f3dbc550f04d9b25c1c15e2878523c1a3df805
+  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "88168246"
+  ms.lasthandoff: 08/20/2020
+  ms.locfileid: "88651023"
 landingContent:
 - title: 排查部署失败问题
   linkLists:
@@ -108,9 +108,9 @@ landingContent:
     - text: 排查在调整 VM 大小时出现的分配失败问题
       url: ./allocation-failure.md
     - text: 了解 VM 上的临时驱动器
-      url: ../windows/managed-disks-overview.md#temporary-disk
+      url: ../managed-disks-overview.md#temporary-disk
     - text: Azure 托管磁盘概述
-      url: ../windows/managed-disks-overview.md
+      url: ../managed-disks-overview.md
 - title: 磁盘加密问题
   linkLists:
   - linkListType: how-to-guide
