--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -22,6 +22,8 @@
       href: concepts-twins-graph.md
     - name: 查询语言
       href: concepts-query-language.md
+    - name: 查询单位
+      href: concepts-query-units.md
     - name: 与其他服务集成
       href: concepts-integration.md
     - name: 事件路由
