--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -10,10 +10,12 @@
       href: overview-iot-central-developer.md
     - name: 最新更新
       items:
+        - name: 2020 年 7 月新增功能和更新的功能
+          href: 'https://azure.microsoft.com/updates/azure-iot-central-feature-updates-july-2020/'
         - name: 2020 年 6 月新增功能和更新的功能
-          href: 'https://azure.microsoft.com/en-us/updates/azure-iot-central-feature-updates-june-2020/'
+          href: 'https://azure.microsoft.com/updates/azure-iot-central-feature-updates-june-2020/'
         - name: 2020 年 6 月 UI 和文档更新
-          href: 'https://azure.microsoft.com/en-us/updates/azure-iot-central-ui-documenation-updates-june-2020/'
+          href: 'https://azure.microsoft.com/updates/azure-iot-central-ui-documenation-updates-june-2020/'
         - name: 2020 年 5 月作业和指标更新
           href: 'https://azure.microsoft.com/updates/azure-iot-central-jobs-and-metrics-feature-updates-may-2020/'
         - name: 2020 年 5 月仪表板更新
