--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -140,9 +140,6 @@
         - name: 库数据
           displayName: export
           href: ai-gallery-control-personal-data-dsr.md
-        - name: 下载笔记本
-          displayName: export
-          href: download-notebooks-data.md
 - name: 参考
   items:
     - name: 算法和模块参考
@@ -165,5 +162,5 @@
       href: 'https://azure.microsoft.com/regions/services/'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/machine-learning/'
-    - name: '自定义神经网络 (Net#)'
+    - name: 自定义神经网络 (Net#)
       href: azure-ml-netsharp-reference-guide.md
