--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -134,7 +134,7 @@
           maintainContext: true
           items:
             - name: 约束的 vCPU
-              href: ../virtual-machines/windows/constrained-vcpu.md
+              href: ../virtual-machines/constrained-vcpu.md
               maintainContext: true
         - name: 存储优化
           href: ../virtual-machines/sizes-storage.md
@@ -173,16 +173,16 @@
     - name: 磁盘存储
       items:
         - name: 托管磁盘
-          href: ../virtual-machines/windows/managed-disks-overview.md
+          href: ../virtual-machines/managed-disks-overview.md
           maintainContext: true
         - name: 选择磁盘类型
-          href: ../virtual-machines/windows/disks-types.md
+          href: ../virtual-machines/disks-types.md
           maintainContext: true
         - name: 加密
           href: ../virtual-machines/windows/disk-encryption.md?toc=%2fazure%2fvirtual-machine-scale-sets%2ftoc.json
           maintainContext: true
         - name: 高级存储性能
-          href: ../virtual-machines/windows/premium-storage-performance.md
+          href: ../virtual-machines/premium-storage-performance.md
           maintainContext: true
         - name: 临时 OS 磁盘
           href: ../virtual-machines/ephemeral-os-disks.md
@@ -190,7 +190,7 @@
           href: ../virtual-machines/windows/disk-scalability-targets.md
           maintainContext: true
         - name: 磁盘的备份和灾难恢复
-          href: ../virtual-machines/windows/backup-and-disaster-recovery-for-azure-iaas-disks.md
+          href: ../virtual-machines/backup-and-disaster-recovery-for-azure-iaas-disks.md
           maintainContext: true
     - name: 网络
       href: ../virtual-machines/network-overview.md
@@ -201,7 +201,7 @@
     - name: 安全性
       items:
         - name: 安全和策略
-          href: ../virtual-machines/windows/security-policy.md
+          href: ../virtual-machines/security-policy.md
         - name: Azure 磁盘加密
           href: disk-encryption-overview.md
         - name: Azure 安全基线
@@ -219,7 +219,7 @@
           maintainContext: true
     - name: 规模集常见问题解答
       href: virtual-machine-scale-sets-faq.md
-- name: 如何
+- name: 操作方式
   items:
     - name: 规划和设计
       items:
