--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -239,7 +239,7 @@
             - name: Mv2 系列
               href: ../mv2-series.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
             - name: 约束的 vCPU
-              href: constrained-vcpu.md
+              href: ../constrained-vcpu.md
         - name: 存储优化
           items:
             - name: 概述
@@ -294,7 +294,7 @@
             - name: 什么是 Azure 预留？
               href: ../../cost-management-billing/reservations/save-compute-costs-reservations.md?toc=/azure/virtual-machines/linux/toc.json
             - name: VM 实例大小灵活性
-              href: reserved-vm-instance-size-flexibility.md
+              href: ../reserved-vm-instance-size-flexibility.md
         - name: 点 VM
           displayName: 'pre-empt, preempt'
           href: spot-vms.md
@@ -317,7 +317,7 @@
             - name: 什么是 Azure 预留？
               href: ../../cost-management-billing/reservations/save-compute-costs-reservations.md
             - name: VM 实例大小灵活性
-              href: reserved-vm-instance-size-flexibility.md
+              href: ../reserved-vm-instance-size-flexibility.md
         - name: 基准评分
           href: compute-benchmark-scores.md
     - name: 认可的发行版
@@ -329,21 +329,21 @@
     - name: 磁盘存储
       items:
         - name: 托管磁盘简介
-          href: managed-disks-overview.md
+          href: ../managed-disks-overview.md
         - name: 选择适用于 IaaS VM 的磁盘类型
-          href: disks-types.md
+          href: ../disks-types.md
         - name: 加密
           href: disk-encryption.md
         - name: 磁盘存储预留
           href: ../../cost-management-billing/reservations/understand-disk-reservations.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: 为实现高性能而设计
-          href: premium-storage-performance.md
+          href: ../premium-storage-performance.md
         - name: 磁盘突发
           href: disk-bursting.md
         - name: 磁盘的可伸缩性目标
           href: disk-scalability-targets.md
         - name: 磁盘的备份和灾难恢复
-          href: backup-and-disaster-recovery-for-azure-iaas-disks.md
+          href: ../backup-and-disaster-recovery-for-azure-iaas-disks.md
         - name: 共享磁盘
           href: disks-shared.md
         - name: 临时 OS 磁盘
@@ -357,7 +357,7 @@
     - name: 安全性
       items:
         - name: 安全和策略
-          href: security-policy.md
+          href: ../security-policy.md
         - name: Azure 磁盘加密
           href: disk-encryption-overview.md
         - name: Azure Policy 的安全控件
@@ -958,7 +958,7 @@
           displayName: 'Azure Resource Manager, ARM'
           href: ../using-managed-disks-template-deployments.md
         - name: 启用共享磁盘
-          href: disks-shared-enable.md
+          href: ../disks-shared-enable.md
         - name: 将 vhd 上传到磁盘 - CLI
           href: disks-upload-vhd-to-managed-disk-cli.md
         - name: 安全导入/导出磁盘 - CLI
@@ -968,11 +968,11 @@
         - name: 调整磁盘大小
           href: expand-disks.md
         - name: 使用存储资源管理器管理磁盘
-          href: disks-use-storage-explorer-managed-disks.md
+          href: ../disks-use-storage-explorer-managed-disks.md
         - name: 拍摄磁盘快照
           href: snapshot-copy-managed-disk.md
         - name: 预留磁盘存储
-          href: disks-reserved-capacity.md
+          href: ../disks-reserved-capacity.md
         - name: 创建增量快照 - CLI
           href: disks-incremental-snapshots.md
         - name: 创建增量快照 - 门户
@@ -1008,7 +1008,7 @@
             - name: 使用写入加速器
               href: ../how-to-enable-write-accelerator.md
             - name: 使用超级磁盘
-              href: disks-enable-ultra-ssd.md
+              href: ../disks-enable-ultra-ssd.md
             - name: 对磁盘进行基准检验
               href: disks-benchmarks.md
             - name: 优化性能
