--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -193,8 +193,8 @@
 - name: 虚拟磁盘管理问题
   items:
     - name: 概述
-      href: ../windows/managed-disks-overview.md
-    - name: 常见问题
+      href: ../managed-disks-overview.md
+    - name: 常见问题解答
       href: ../windows/faq-for-disks.md
     - name: 删除存储资源时出错
       href: storage-resource-deletion-errors.md
@@ -285,7 +285,7 @@
           href: ../windows/disk-encryption-overview.md
         - name: 疑难解答
           href: ../windows/disk-encryption-troubleshooting.md
-        - name: 常见问题
+        - name: 常见问题解答
           href: ../windows/disk-encryption-faq.md
     - name: Linux
       items:
