--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -222,7 +222,7 @@
             - name: Mv2 系列
               href: ../mv2-series.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
             - name: 约束的 vCPU
-              href: constrained-vcpu.md
+              href: ../constrained-vcpu.md
         - name: 存储优化
           items:
             - name: 概述
@@ -279,7 +279,7 @@
             - name: 什么是 Azure 预留？
               href: ../../cost-management-billing/reservations/save-compute-costs-reservations.md?toc=/azure/virtual-machines/windows/toc.json
             - name: VM 实例大小灵活性
-              href: reserved-vm-instance-size-flexibility.md
+              href: ../reserved-vm-instance-size-flexibility.md
         - name: 点 VM
           displayName: 'pre-empt, preempt'
           href: spot-vms.md
@@ -305,7 +305,7 @@
             - name: 什么是 Azure 预留？
               href: ../../cost-management-billing/reservations/save-compute-costs-reservations.md
             - name: VM 实例大小灵活性
-              href: reserved-vm-instance-size-flexibility.md
+              href: ../reserved-vm-instance-size-flexibility.md
     - name: 专用主机
       href: dedicated-hosts.md
     - name: 维护和更新
@@ -313,21 +313,21 @@
     - name: 磁盘存储
       items:
         - name: 托管磁盘简介
-          href: managed-disks-overview.md
+          href: ../managed-disks-overview.md
         - name: 选择适用于 IaaS VM 的磁盘类型
-          href: disks-types.md
+          href: ../disks-types.md
         - name: 加密
           href: disk-encryption.md
         - name: 磁盘存储预留
           href: ../../cost-management-billing/reservations/understand-disk-reservations.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
         - name: 为实现高性能而设计
-          href: premium-storage-performance.md
+          href: ../premium-storage-performance.md
         - name: 磁盘突发
           href: disk-bursting.md
         - name: 磁盘的可伸缩性目标
           href: disk-scalability-targets.md
         - name: 磁盘的备份和灾难恢复
-          href: backup-and-disaster-recovery-for-azure-iaas-disks.md
+          href: ../backup-and-disaster-recovery-for-azure-iaas-disks.md
         - name: 共享磁盘
           href: disks-shared.md
         - name: 临时 OS 磁盘
@@ -341,7 +341,7 @@
     - name: 安全性
       items:
         - name: 安全和策略
-          href: security-policy.md
+          href: ../security-policy.md
         - name: Azure 磁盘加密
           href: disk-encryption-overview.md
         - name: Azure Policy 的安全控件
@@ -432,7 +432,7 @@
           href: migration-classic-resource-manager-errors.md
         - name: 用于迁移的社区工具
           href: migration-classic-resource-manager-community-tools.md
-        - name: 常见问题
+        - name: 常见问题解答
           href: ../migration-classic-resource-manager-faq.md
     - name: 使用映像
       displayName: 'SIG, AMI, image'
@@ -689,7 +689,7 @@
           items:
             - name: 代理概述
               href: ../../azure-monitor/platform/agents-overview.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
-            - name: 常见问题
+            - name: 常见问题解答
               href: ../../azure-monitor/faq.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json#agents
             - name: Azure 诊断扩展
               items:
@@ -855,7 +855,7 @@
           displayName: Azure Resource Manager
           href: ../using-managed-disks-template-deployments.md
         - name: 启用共享磁盘
-          href: disks-shared-enable.md
+          href: ../disks-shared-enable.md
         - name: 将 vhd 上传到磁盘 - PowerShell
           href: disks-upload-vhd-to-managed-disk-powershell.md
         - name: 安全导入/导出磁盘 - 门户
@@ -863,11 +863,11 @@
         - name: 调整磁盘大小
           href: expand-os-disk.md
         - name: 使用存储资源管理器管理磁盘
-          href: disks-use-storage-explorer-managed-disks.md
+          href: ../disks-use-storage-explorer-managed-disks.md
         - name: 拍摄磁盘快照
           href: snapshot-copy-managed-disk.md
         - name: 预留磁盘存储
-          href: disks-reserved-capacity.md
+          href: ../disks-reserved-capacity.md
         - name: 创建增量快照 - PowerShell
           href: disks-incremental-snapshots.md
         - name: 创建增量快照 - 门户
@@ -903,7 +903,7 @@
             - name: 启用写入加速器
               href: ../how-to-enable-write-accelerator.md
             - name: 使用超级磁盘
-              href: disks-enable-ultra-ssd.md
+              href: ../disks-enable-ultra-ssd.md
             - name: 对磁盘进行基准检验
               href: disks-benchmarks.md
         - name: 查找未附加的磁盘 - PowerShell
@@ -1066,5 +1066,5 @@
       href: 'https://stackoverflow.com/questions/tagged/azure-virtual-machine'
     - name: 视频
       href: 'https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines'
-    - name: 常见问题
+    - name: 常见问题解答
       href: faq.md
